--- a/GreekDictionary/Base.lproj/Main.storyboard
+++ b/GreekDictionary/Base.lproj/Main.storyboard
@@ -1,24 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GreekDictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="HOu-3V-BTC">
+                                <rect key="frame" x="0.0" y="90" width="414" height="772"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WordRow" id="5EI-fv-IPx" customClass="WordTableCell" customModule="GreekDictionary" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="37"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5EI-fv-IPx" id="0ai-aI-vku">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1Q-0F-TYP">
+                                                    <rect key="frame" x="8" y="8" width="398" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="H1Q-0F-TYP" secondAttribute="bottom" constant="8" id="Els-rx-VHI"/>
+                                                <constraint firstAttribute="trailing" secondItem="H1Q-0F-TYP" secondAttribute="trailing" constant="8" id="FUr-zC-1ET"/>
+                                                <constraint firstItem="H1Q-0F-TYP" firstAttribute="top" secondItem="0ai-aI-vku" secondAttribute="top" constant="8" id="YAW-Dz-aiT"/>
+                                                <constraint firstItem="H1Q-0F-TYP" firstAttribute="leading" secondItem="0ai-aI-vku" secondAttribute="leading" constant="8" id="ugT-yE-p7t"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="title" destination="H1Q-0F-TYP" id="zhB-B9-yKm"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="G4V-Po-aBS"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="xhq-g3-RNl"/>
+                                </connections>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="36b-Hu-35R" customClass="SearchTextField" customModule="GreekDictionary" customModuleProvider="target">
+                                <rect key="frame" x="20" y="44" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" spellCheckingType="no" smartQuotesType="no" textContentType="name"/>
+                                <connections>
+                                    <action selector="searchFieldValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="VEI-4l-Aaq"/>
+                                </connections>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="36b-Hu-35R" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="64q-Tr-a4E"/>
+                            <constraint firstItem="36b-Hu-35R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="IWh-hb-vxa"/>
+                            <constraint firstItem="HOu-3V-BTC" firstAttribute="top" secondItem="36b-Hu-35R" secondAttribute="bottom" constant="12" id="IpR-mo-114"/>
+                            <constraint firstItem="HOu-3V-BTC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Nqi-Th-uek"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HOu-3V-BTC" secondAttribute="trailing" id="Rxc-uq-XsR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="36b-Hu-35R" secondAttribute="trailing" constant="20" id="Z5y-rA-Xko"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HOu-3V-BTC" secondAttribute="bottom" id="q53-ul-2k1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchField" destination="36b-Hu-35R" id="fSU-hI-QgB"/>
+                        <outlet property="tableView" destination="HOu-3V-BTC" id="ALz-Aq-I6Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="85.507246376811594" y="87.723214285714278"/>
+        </scene>
+        <!--Word View Controller-->
+        <scene sceneID="2OJ-LU-Cfq">
+            <objects>
+                <viewController storyboardIdentifier="WordViewControllerID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ht6-lo-xEb" customClass="WordViewController" customModule="GreekDictionary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7Kn-9U-hoC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="SomeText Deescription" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="f4R-2V-4vQ">
+                                <rect key="frame" x="8" y="56" width="398" height="798"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Qgi-p7-fhW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="f4R-2V-4vQ" firstAttribute="top" secondItem="Qgi-p7-fhW" secondAttribute="top" constant="12" id="No0-L7-Z0N"/>
+                            <constraint firstItem="Qgi-p7-fhW" firstAttribute="trailing" secondItem="f4R-2V-4vQ" secondAttribute="trailing" constant="8" id="Ziq-sG-Rnr"/>
+                            <constraint firstItem="f4R-2V-4vQ" firstAttribute="leading" secondItem="Qgi-p7-fhW" secondAttribute="leading" constant="8" id="iQd-7B-Uk5"/>
+                            <constraint firstItem="Qgi-p7-fhW" firstAttribute="bottom" secondItem="f4R-2V-4vQ" secondAttribute="bottom" constant="8" id="wMX-L2-cqu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionText" destination="f4R-2V-4vQ" id="gl8-XK-jWr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X9g-ZI-zd6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="998.55072463768124" y="87.723214285714278"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
