--- a/GreekDictionary/Controllers/Base.lproj/Main.storyboard
+++ b/GreekDictionary/Controllers/Base.lproj/Main.storyboard
@@ -52,10 +52,10 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="xhq-g3-RNl"/>
                                 </connections>
                             </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="36b-Hu-35R" customClass="SearchTextField" customModule="GreekDictionary" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="36b-Hu-35R">
                                 <rect key="frame" x="20" y="44" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" spellCheckingType="no" smartQuotesType="no" textContentType="name"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartQuotesType="no" textContentType="name"/>
                                 <connections>
                                     <action selector="searchFieldValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="VEI-4l-Aaq"/>
                                 </connections>
